09 September 2008

* Initial UTF-8 support. A bit ugly and with a limit of 4096 UTF-8
  characters per window.

08 September 2008

* 256 colour support. tmux attempts to autodetect the terminal by looking
  both at what ncurses reports (usually wrong for xterm) and checking if
  the TERM contains "256col". For xterm TERM=xterm-256color is needed (as
  well as a build that support 256 colours); this seems to work for rxvt
  as well. On non-256 colour terminals, high colours are translated to white
  foreground and black background.

28 August 2008

* Support OS X/Darwin thanks to bsd-poll.c from OpenSSH. Also convert
  from clock_gettime(2) to gettimeofday(2) as OS X doesn't support the
  former; microsecond accuracy will have to be sufficient ;-).

07 August 2008

* Lose some unused/useless wrapper functions.

25 July 2008

* Shell variables may now be defined and used in configuration file. Define
  variables with:

	VAR=1

  And use with:

        renamew ${VAR}
	renamew "x${VAR}x"

 Also some other fixes to make, for example, "abc""abc" work similarly to
 the shell.

24 July 2008

* Finally lose inconsistently-used SCREEN_DEF* defines.
* If cursor mode is on, switch the arrow keys from \033[A to \033OA.
* Support the numeric keypad in both application and numbers mode. This is
  different from screen which always keeps it in application mode.

19 July 2008

* Unbreak "set status" - tmux thought it was ambiguous, reported by rivo nurges.

02 July 2008

* Split vi and emacs mode keys into two tables and add an option (mode-keys)
  to select between them. Default is emacs, use,

     tmux set mode-keys vi

  to change to vi.

  vi mode uses space to start selection, enter to copy selection and escape
  to clear selection.

01 July 2008

* Protocol versioning. Clients which identify as a different version from the
  server will be rejected.
* tmux 0.4 released.

29 June 2008

* Zombie windows. These are not closed when the child process dies. May be