@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.73 2008-09-09 22:16:36 nicm Exp $
+# $Id: Makefile,v 1.74 2008-09-10 18:59:29 nicm Exp $
 
 .SUFFIXES: .c .o .y .h
 .PHONY: clean update-index.html upload-index.html
@@ -16,7 +16,8 @@ DEBUG=
 META?= \002 # C-b
 
 SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
-      xmalloc.c xmalloc-debug.c input.c input-keys.c screen.c screen-display.c \
+      xmalloc.c xmalloc-debug.c input.c input-keys.c \
+      screen.c screen-display.c screen-write.c screen-redraw.c \
       window.c session.c log.c client.c client-msg.c client-fn.c cfg.c \
       key-string.c key-bindings.c resize.c arg.c mode-key.c \
       cmd.c cmd-generic.c cmd-string.c \
@@ -35,7 +36,7 @@ SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
       cmd-list-commands.c cmd-move-window.c cmd-select-prompt.c \
       cmd-respawn-window.c \
       window-scroll.c window-more.c window-copy.c options.c paste.c \
-      tty.c tty-keys.c tty-write.c screen-write.c screen-redraw.c utf8.c
+      tty.c tty-keys.c tty-write.c colour.c utf8.c
 
 CC?= cc
 INCDIRS+= -I. -I- -I/usr/local/include
