@@ -1,0 +1,74 @@
+/* $Id: colour.c,v 1.1 2008-09-10 18:59:29 nicm Exp $ */
+
+/*
+ * Copyright (c) 2008 Nicholas Marriott <nicm@users.sourceforge.net>
+ *
+ * Permission to use, copy, modify, and distribute this software for any
+ * purpose with or without fee is hereby granted, provided that the above
+ * copyright notice and this permission notice appear in all copies.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
+ * WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
+ * MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
+ * ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
+ * WHATSOEVER RESULTING FROM LOSS OF MIND, USE, DATA OR PROFITS, WHETHER
+ * IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING
+ * OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
+ */
+
+#include <sys/types.h>
+
+#include <string.h>
+
+#include "tmux.h"
+
+const char *
+colour_tostring(u_char c)
+{
+	switch (c) {
+	case 0:
+		return ("black");
+	case 1:
+		return ("red");
+	case 2:
+		return ("green");
+	case 3:
+		return ("yellow");
+	case 4:
+		return ("blue");
+	case 5:
+		return ("magenta");
+	case 6:
+		return ("cyan");
+	case 7:
+		return ("white");
+	case 8:
+		return ("default");
+	}
+	return (NULL);
+}
+
+/* String to colour. */
+u_char
+colour_fromstring(const char *s)
+{
+	if (strcasecmp(s, "black") == 0 || (s[0] == '0' && s[1] == '\0'))
+		return (0);
+	if (strcasecmp(s, "red") == 0 || (s[0] == '1' && s[1] == '\0'))
+		return (1);
+	if (strcasecmp(s, "green") == 0 || (s[0] == '2' && s[1] == '\0'))
+		return (2);
+	if (strcasecmp(s, "yellow") == 0 || (s[0] == '3' && s[1] == '\0'))
+		return (3);
+	if (strcasecmp(s, "blue") == 0 || (s[0] == '4' && s[1] == '\0'))
+		return (4);
+	if (strcasecmp(s, "magenta") == 0 || (s[0] == '5' && s[1] == '\0'))
+		return (5);
+	if (strcasecmp(s, "cyan") == 0 || (s[0] == '6' && s[1] == '\0'))
+		return (6);
+	if (strcasecmp(s, "white") == 0 || (s[0] == '7' && s[1] == '\0'))
+		return (7);
+	if (strcasecmp(s, "default") == 0 || (s[0] == '8' && s[1] == '\0'))
+		return (8);
+	return (255);
+}
