@@ -1,4 +1,4 @@
-/* $Id: screen.c,v 1.69 2008-09-09 22:16:36 nicm Exp $ */
+/* $Id: screen.c,v 1.70 2008-09-10 18:59:29 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -73,58 +73,6 @@
  *
  * If you're thinking this all seems too complicated, that's because it is :-/.
  */
-
-/* Colour to string. */
-const char *
-screen_colourstring(u_char c)
-{
-	switch (c) {
-	case 0:
-		return ("black");
-	case 1:
-		return ("red");
-	case 2:
-		return ("green");
-	case 3:
-		return ("yellow");
-	case 4:
-		return ("blue");
-	case 5:
-		return ("magenta");
-	case 6:
-		return ("cyan");
-	case 7:
-		return ("white");
-	case 8:
-		return ("default");
-	}
-	return (NULL);
-}
-
-/* String to colour. */
-u_char
-screen_stringcolour(const char *s)
-{
-	if (strcasecmp(s, "black") == 0 || (s[0] == '0' && s[1] == '\0'))
-		return (0);
-	if (strcasecmp(s, "red") == 0 || (s[0] == '1' && s[1] == '\0'))
-		return (1);
-	if (strcasecmp(s, "green") == 0 || (s[0] == '2' && s[1] == '\0'))
-		return (2);
-	if (strcasecmp(s, "yellow") == 0 || (s[0] == '3' && s[1] == '\0'))
-		return (3);
-	if (strcasecmp(s, "blue") == 0 || (s[0] == '4' && s[1] == '\0'))
-		return (4);
-	if (strcasecmp(s, "magenta") == 0 || (s[0] == '5' && s[1] == '\0'))
-		return (5);
-	if (strcasecmp(s, "cyan") == 0 || (s[0] == '6' && s[1] == '\0'))
-		return (6);
-	if (strcasecmp(s, "white") == 0 || (s[0] == '7' && s[1] == '\0'))
-		return (7);
-	if (strcasecmp(s, "default") == 0 || (s[0] == '8' && s[1] == '\0'))
-		return (8);
-	return (255);
-}
 
 /* Create a new screen. */
 void
